@@ -236,6 +236,9 @@ Trunk - Unreleased
     HIVE-547. Better logging in ExecDriver
     (Zheng Shao via namit)
 
+    HIVE-561. Make hash aggregation threshold configurable
+    (Zheng Shao via namit)
+
 Release 0.3.1 - Unreleased
 
   INCOMPATIBLE CHANGES
